--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -1,3 +1,7 @@
+.container {
+    transition: 0s;
+}
+
 p {
     margin: 0;
 }
